fix: overflow scroll on body

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -22,7 +22,8 @@ body {
     padding: 0;
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .w-25 {
